Le lien LinkedIn Valide

--- a/Portfolio/portfolio-elilan.html
+++ b/Portfolio/portfolio-elilan.html
@@ -1678,7 +1678,7 @@ if __name__=="__main__":
                     <a href="tel:+33652398253" class="contact-link">
                         📱 06 52 39 82 53
                     </a>
-                    <a href="https://linkedin.com/in/elilan-kanagarajah" target="_blank" class="contact-link">
+                    <a href="https://www.linkedin.com/in/elilan-kanagarajah-b70634227/" target="_blank" class="contact-link">
                         💼 LinkedIn
                     </a>
                 </div>
